removendo todas as flags para ver se pelo menos a vm sobe